subiendo cambios de laterales

--- a/src/assets/styles/custom-fonts.scss
+++ b/src/assets/styles/custom-fonts.scss
@@ -10,3 +10,10 @@
     src: url(../../assets/fonts/BebasNeue.ttf);
 }   
 
+@font-face 
+{
+    font-family: Tiza;
+    src: url(../../assets/fonts/tiza.ttf);
+}   
+
+
