bugs were fixed

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -763,14 +763,11 @@
                 </section>
                 <section class="section-info">
 
-                  <span><b class="titles">Grupos de trabajo practico:</b> Podra interactuar con sus compañeros y
-                    profesor sobre trabajos practicos ya sea agregando comentarios o subiendo los avances del
-                    mismo.</span>
+                  <span><b class="titles">Envio de tareas:</b> Podra asignar tareas tanto individuales como grupales con fechas de entrega.</span>
                 </section>
                 <section class="section-info">
 
-                  <span><b class="titles">Mensajeria:</b> Podra enviar mensajes con sus compañeros y profesores a traves
-                    del chat.</span>
+                  <span><b class="titles">Mensajeria:</b> Podra interactuar con los alumnos y padres a traves del chat.</span>
                 </section>
 
               </span>
@@ -1195,7 +1192,7 @@
               <path d="M416.58,202.74,233.14,386.16a34.79,34.79,0,0,1-49.21,0l-94.69-94.7a34.8,34.8,0,0,1,49.21-49.22l70.09,70.1L367.36,153.52a34.8,34.8,0,0,1,49.22,49.22Z" transform="translate(-5.49 -5.49)"/>
             </svg>
             
-            Básica
+            Padres
           </div>
           <div class="subs-head" style="background-color: #9acd8d">
             <ul>
@@ -1211,7 +1208,7 @@
               <path d="M256,5.49C117.55,5.49,5.49,117.53,5.49,256S117.53,506.51,256,506.51,506.51,394.47,506.51,256,394.47,5.49,256,5.49Zm0,461.88A211.37,211.37,0,1,1,467.37,256,211.26,211.26,0,0,1,256,467.37Z" transform="translate(-5.49 -5.49)"/>
               <path d="M172,411a35,35,0,0,1-34.38-40.86l12.93-75.37L95.81,241.38a34.92,34.92,0,0,1,19.35-59.57l75.68-11,33.84-68.58a34.92,34.92,0,0,1,62.63,0l33.85,68.58,75.68,11a34.92,34.92,0,0,1,19.35,59.57l-54.76,53.38,12.93,75.37a34.92,34.92,0,0,1-50.67,36.81L256,371.36l-67.69,35.58A35,35,0,0,1,172,411Zm84-76.9a34.85,34.85,0,0,1,16.25,4l64.93,34.13-12.4-72.29a34.9,34.9,0,0,1,10-30.91l52.53-51.21-72.6-10.54a35,35,0,0,1-26.29-19.11L256,122.39l-32.47,65.78a34.93,34.93,0,0,1-26.29,19.11l-72.59,10.54L177.18,269a34.92,34.92,0,0,1,10,30.91l-12.4,72.29,64.93-34.13A34.82,34.82,0,0,1,256,334.09Z" transform="translate(-5.49 -5.49)"/>
             </svg>
-           Estándar
+           Admin Estándar
           </div>
           <div class="subs-head" style="background-color: #9acd8d">
             <ul>
@@ -1233,7 +1230,7 @@
             <svg class="svg-icon" id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 501.01 501.01">
               <path d="M383.2,175.32l-65.85,22-45.07-67.59a19.57,19.57,0,0,0-32.56,0l-45.07,67.59-65.85-22a19.59,19.59,0,0,0-25.38,22.4c29.09,139.63,24.6,136,32,143.39,66.47,66.46,174.62,66.47,241.09,0,7.44-7.43,3-4,32-143.39A19.57,19.57,0,0,0,383.2,175.32ZM344.72,317.4a131.52,131.52,0,0,1-177.44,0l-18.86-94.28,48,16a19.58,19.58,0,0,0,22.47-7.71L256,175.81l37.07,55.61a19.57,19.57,0,0,0,22.47,7.71l48-16ZM256,5.49C117.55,5.49,5.49,117.53,5.49,256S117.53,506.51,256,506.51,506.51,394.47,506.51,256,394.47,5.49,256,5.49Zm0,461.88A211.37,211.37,0,1,1,467.37,256,211.26,211.26,0,0,1,256,467.37Z" transform="translate(-5.49 -5.49)"/>
             </svg>
-            Premium
+            Admin Premium
           </div>
           <div class="subs-head" style="background-color: #9acd8d">
             <ul>
