fixeando vistas mobile

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -484,7 +484,7 @@
 </div>
 <div class="scroll-type" (click)="changeScroll()" [matTooltip]="getScrollMode()">
 
-  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 237 365.61">
+  <svg  id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 237 365.61">
     <defs>
       <style>
         .cls-1 {
@@ -633,7 +633,7 @@
     <div class="section-title" #pageTitle>
       <span [innerHTML]="currentTitle">Bienvenidos</span>
     </div>
-    <div class="second-row">
+    <div class="second-row admin">
       <div class="col-12 col-md-8">
         <div class="mycard admin-card">
 
@@ -686,18 +686,7 @@
             <p class="span-title">Seccion padres:</p> Podra llevar un control de las notas, ausencias y
             boletines de sus hijos durante todo el ciclo escolar, debidamente notificado.
 
-            <button matTooltip="Ver mas" class="view-more" style="left:0; right: 15px;">
-              <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 298.62 296.14">
-
-                <path id="semicircle" [ngClass]="{'cancel': selectedFirst}"
-                  d="M298.61,153.7a8.26,8.26,0,0,0-7.89-8.63h-.21a8.25,8.25,0,0,0-5.79,14.23A136.52,136.52,0,0,1,148.07,285.14C72.49,285.14,11,223.65,11,148.07S72.49,11,148.07,11A138,138,0,0,1,268.65,82.88a8.22,8.22,0,0,0,7.68,11.3v0a8.29,8.29,0,0,0,7.8-5.55A8.28,8.28,0,0,0,278.51,78,148,148,0,0,0,148.07,0C66.39,0,0,66.42,0,148.07S66.39,296.14,148.07,296.14A148,148,0,0,0,295.7,159.63,8.2,8.2,0,0,0,298.61,153.7Z"
-                  transform="translate(0 0)" />
-                <path id="cross" [ngClass]="{'cancel': selectedFirst}"
-                  d="M230.83,142.57H154.89V66.63a5.5,5.5,0,0,0-11,0v75.94H68a5.5,5.5,0,1,0,0,11h75.94v75.94a5.5,5.5,0,0,0,11,0V153.57h75.94a5.5,5.5,0,0,0,0-11Z"
-                  transform="translate(0 0)" />
-              </svg>
-
-            </button>
+        
           </span>
           <img src="../../../assets/images/background1-second-image.png" alt="">
 
@@ -735,18 +724,7 @@
             <span class="teacher-span resume-info">
               <p class="span-title">Sección Profesores</p>Pensado para el control y administración de las tareas, carga
               de notas y comunicados
-              <button matTooltip="Ver mas" class="view-more">
-                <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 298.62 296.14">
-
-                  <path id="semicircle" [ngClass]="{'cancel': selectedSecond}"
-                    d="M298.61,153.7a8.26,8.26,0,0,0-7.89-8.63h-.21a8.25,8.25,0,0,0-5.79,14.23A136.52,136.52,0,0,1,148.07,285.14C72.49,285.14,11,223.65,11,148.07S72.49,11,148.07,11A138,138,0,0,1,268.65,82.88a8.22,8.22,0,0,0,7.68,11.3v0a8.29,8.29,0,0,0,7.8-5.55A8.28,8.28,0,0,0,278.51,78,148,148,0,0,0,148.07,0C66.39,0,0,66.42,0,148.07S66.39,296.14,148.07,296.14A148,148,0,0,0,295.7,159.63,8.2,8.2,0,0,0,298.61,153.7Z"
-                    transform="translate(0 0)" />
-                  <path id="cross" [ngClass]="{'cancel': selectedSecond}"
-                    d="M230.83,142.57H154.89V66.63a5.5,5.5,0,0,0-11,0v75.94H68a5.5,5.5,0,1,0,0,11h75.94v75.94a5.5,5.5,0,0,0,11,0V153.57h75.94a5.5,5.5,0,0,0,0-11Z"
-                    transform="translate(0 0)" />
-                </svg>
-
-              </button>
+          
             </span>
             <img class="teacher-img" src="../../../assets/images/background1-first-image.png" alt="">
           </div>
@@ -789,18 +767,7 @@
             <p class="span-title">Seccion Alumnos</p>Se trata de una version simplificada para la consulta directa de
             los alumnos a su informacion academica.
 
-            <button matTooltip="Ver mas" class="view-more">
-              <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 298.62 296.14">
 
-                <path id="semicircle" [ngClass]="{'cancel': selectedThird}"
-                  d="M298.61,153.7a8.26,8.26,0,0,0-7.89-8.63h-.21a8.25,8.25,0,0,0-5.79,14.23A136.52,136.52,0,0,1,148.07,285.14C72.49,285.14,11,223.65,11,148.07S72.49,11,148.07,11A138,138,0,0,1,268.65,82.88a8.22,8.22,0,0,0,7.68,11.3v0a8.29,8.29,0,0,0,7.8-5.55A8.28,8.28,0,0,0,278.51,78,148,148,0,0,0,148.07,0C66.39,0,0,66.42,0,148.07S66.39,296.14,148.07,296.14A148,148,0,0,0,295.7,159.63,8.2,8.2,0,0,0,298.61,153.7Z"
-                  transform="translate(0 0)" />
-                <path id="cross" [ngClass]="{'cancel': selectedThird}"
-                  d="M230.83,142.57H154.89V66.63a5.5,5.5,0,0,0-11,0v75.94H68a5.5,5.5,0,1,0,0,11h75.94v75.94a5.5,5.5,0,0,0,11,0V153.57h75.94a5.5,5.5,0,0,0,0-11Z"
-                  transform="translate(0 0)" />
-              </svg>
-
-            </button>
           </span>
           <img src="../../../assets/images/background1-third-image.png" alt="">
 
