--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     font-family: 'TenorSans', sans-serif;
     font-size: 0.96rem;
 }
+section{
+    box-shadow: -4px 0 12px 12px;
+  }
