--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -12,6 +12,15 @@
     flex-direction: column;
 }
 
+.second-row
+{
+  width: 94%;
+  padding: 4em;
+  background-color: #175d9169;
+  backdrop-filter: blur(15px);
+  border-radius: 1em;
+}
+
 .first-row{
     display: flex;
     width: 100%;
@@ -931,9 +940,40 @@ svg{
 
 @media (max-width: 960px)
 {
-  .mobile-under{
-    display: flex;
+  .right-lateral{ display: none;}
+
+ 
+  .mycard span{
+    overflow: scroll;
   }
+  .second-row{
+    width: 100%;
+    padding: 0;
+  }
+  .fourth-row{
+    width: 100%;
+    height: 600px;
+  }
+ 
+
+  .section-title{
+    display: none;
+  }
+  .second-row{
+    padding: 0;
+    width: 100%;
+    margin-top: -7em;
+  }
+  .container-section:nth-child(3){
+    margin-top: 15em;
+  }
+
+  .second-presentation.show-presentation span{
+    width: 100%;
+  }
+
+ 
+ 
   .card-info{
     width: 100% !important;
   }
@@ -985,8 +1025,39 @@ svg{
 
 @media (max-width: 767px)
 {
+
+  .first-card img {
+    width: 50%;
+
+  }
+  .third-card img{
+    width: 50%;
+  }
+  .second-card img{
+    width: 50%;
+  }
+
+  .second-row{
+    width: 100%;
+    padding: 0;
+  }
+ .mycard.admin-card{
+   height: 35vh;
+ }
+  .admin-card img{
+    width: 150px;
+  }
+  .showed { 
+    font-size: small;
+  }
+  .left-lateral.show-presentation {
+  display: none;
+ }
+ .right-lateral.show-presentation{
+display: none;
+}
   #third-col{
-    margin-top: 17em;
+    margin-top: 19em;
   }
   .second-row{
     flex-direction: column;
@@ -998,7 +1069,7 @@ svg{
     
   }
   .mycard{
-    height: 250px;
+    height: 280px;
   }
 
   .mycard .second-card{
@@ -1016,11 +1087,6 @@ svg{
   }
 
 
-  .second-row .col-12 img{
-    width: 75%;
-
-
-  }
   .mycard{
     width: 100%;
   }
@@ -1044,6 +1110,7 @@ svg{
 }
 
 @media (max-width: 500px){
+  
   .second-row{
     flex-direction: column;
     width:100%;
@@ -1199,12 +1266,29 @@ b.titles{
 }
 
 @media(max-width:961px){
+  .scroll-type{
+    display: none !important;
+  }
+  .row-mark{
+    justify-content: space-evenly !important;
+  }
   .show-info{
     opacity: 1;
     transform: translateX(31vw);
   }
   
-  
+  .second-row{
+    width: 100%;
+    padding: 0;
+  }
+}
+
+@media(max-width:450px){
+
+  .second-row{
+    width: 100% !important;
+    padding: 0 !important;
+  }
 }
 
 .show-third-info{
@@ -1373,14 +1457,7 @@ transform: rotate(0);
 
 
 
-.second-row
-{
-  width: 94%;
-  padding: 4em;
-  background-color: #175d9169;
-  backdrop-filter: blur(15px);
-  border-radius: 1em;
-}
+
 
 
 
@@ -2116,3 +2193,17 @@ animation-delay: 0.5s;
   text-indent: 10px;
 }
 
+@media (max-width: 360px){
+  .second-row{
+    padding: 0;
+    width: 100%;
+    margin-top: -7em;
+  }
+  .row-mark{
+    width: 100vw;
+    justify-content: space-evenly;
+  }
+  .gallery-container{
+    width: 65vw;
+  }
+}
